conteúdo tela inicial

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="tela-principal">
            <div class="logo">
-                <label>&lt;/DS Developer&gt;</label>
+                <img class="logo-site" src="img/logo.png" alt="logo">
            </div>
             <nav class="menu">
                 <ul>
@@ -22,5 +22,27 @@
             </nav>
         </div>
     </header>
+
+    <main>
+        <section class="interface-principal">
+            <div class="perfil">
+                <div class="flex">
+                    <div class="inicio-site">
+                        <h1>Transformando complexidade em simplicidade tecnológica.</h1>
+                        <p>Acredito que a simplicidade é a chave para criar experiências tecnológicas verdadeiramente excepcionais. Minha abordagem consiste em desvendar a complexidade, traduzindo-a em soluções acessíveis e intuitivas. Isso não apenas melhora a usabilidade, mas também permite que as pessoas adotem a tecnologia de forma mais eficaz. Minha paixão por transformar o complicado em simples continua a impulsionar meu trabalho diário, e estou comprometido em criar um mundo digital mais acessível e amigável para todos.</p>
+                            <div>
+                                <a href="#">
+                                    <button class="btn-contato">Entre em contato</button>
+                                </a>
+                            </div>
+                        </div>
+
+                    <div class="img-perfil">
+                        <img src="img/foto-perfil.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
