adding and styling content

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <section class="interface-principal">
             <div class="perfil">
-                <div class="flex">
+                <div class="flex01">
                     <div class="inicio-site">
                         <h1>Transformando complexidade em simplicidade tecnológica.</h1>
                         <p>Acredito que a simplicidade é a chave para criar experiências tecnológicas verdadeiramente excepcionais. Minha abordagem consiste em desvendar a complexidade, traduzindo-a em soluções acessíveis e intuitivas. Isso não apenas melhora a usabilidade, mas também permite que as pessoas adotem a tecnologia de forma mais eficaz. Minha paixão por transformar o complicado em simples continua a impulsionar meu trabalho diário, e estou comprometido em criar um mundo digital mais acessível e amigável para todos.</p>
@@ -37,8 +37,22 @@
                             </div>
                         </div>
 
-                    <div class="img-perfil">
-                        <img src="img/foto-perfil.png" alt="">
+                    <div class="perfil-img-nome">
+                        <img src="img/foto-perfil.png" alt="foto-perfil">
+                        <p class="descricao-perfil">Diego da Silva Rodrigues</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="sobre-mim">
+            <div class="informacoes">
+                <div class="flex02">
+                    <div class="biografia">
+                        <h2>Sobre Mim:</h2>
+                        <p>Meu nome é Diego da Silva Rodrigues sou desenvolvedor front end, e desde criança, a tecnologia sempre foi minha paixão. Cresci fascinado por computadores e sistemas, e essa curiosidade me guiou ao longo de toda minha vida.</p>
+                        <p>Atualmente, estou cursando Análise e Desenvolvimento de Sistemas na área de Tecnologia da Informação (TI). Essa jornada acadêmica tem sido incrível, e estou ansioso para continuar aprendendo e me desenvolvendo nessa área empolgante.</p>
+                        <p>Embora ainda não tenha concluído meu curso, estou empolgado para entrar no mercado de trabalho e aplicar o conhecimento que adquiri até agora. A tecnologia é minha paixão, e sei que minha jornada na área de TI está apenas começando. Estou determinado a continuar crescendo profissionalmente e contribuindo para soluções tecnológicas inovadoras.</p>
                     </div>
                 </div>
             </div>
