update section sobre mim

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                     <div class="inicio-site">
                         <h1>Transformando complexidade em simplicidade tecnológica.</h1>
                         <p>Acredito que a simplicidade é a chave para criar experiências tecnológicas verdadeiramente excepcionais. Minha abordagem consiste em desvendar a complexidade, traduzindo-a em soluções acessíveis e intuitivas. Isso não apenas melhora a usabilidade, mas também permite que as pessoas adotem a tecnologia de forma mais eficaz. Minha paixão por transformar o complicado em simples continua a impulsionar meu trabalho diário, e estou comprometido em criar um mundo digital mais acessível e amigável para todos.</p>
-                            <div>
-                                <a href="#">
-                                    <button class="btn-contato">Entre em contato</button>
-                                </a>
+                            <div class="btn-social">
+                                <a href="#"><button></button></a>
+                                <a href="#"><button></button></a>
+                                <a href="#"><button></button></a>
                             </div>
                         </div>
 
@@ -54,8 +54,35 @@
                         <p>Atualmente, estou cursando Análise e Desenvolvimento de Sistemas na área de Tecnologia da Informação (TI). Essa jornada acadêmica tem sido incrível, e estou ansioso para continuar aprendendo e me desenvolvendo nessa área empolgante.</p>
                         <p>Embora ainda não tenha concluído meu curso, estou empolgado para entrar no mercado de trabalho e aplicar o conhecimento que adquiri até agora. A tecnologia é minha paixão, e sei que minha jornada na área de TI está apenas começando. Estou determinado a continuar crescendo profissionalmente e contribuindo para soluções tecnológicas inovadoras.</p>
                     </div>
+                    <div class="habilidades">
+                        <h3>Habilidades</h3>
+                        <ul>
+                            <li>HTML 5</li>
+                            <li>CSS 3</li>
+                            <li>JavaScript</li>
+                            <li>Java</li>
+                            <li>Git</li>
+                            <li>GitHub</li>
+                            <li>LGPD</li>
+                            <li>Cyber segurity</li>
+                        </ul>
+                    </div>
+                    <div class="soft-skills">
+                        <h3>Soft Sklls</h3>
+                        <ul>
+                            <li>Habilidade de Resolução de Problemas.</li>
+                            <li>Pensamento Lógico.</li>
+                            <li>Comunicação Eficaz.</li>
+                            <li>Habilidade de Trabalho em Equipe.</li>
+                            <li>Gestão de Tempo.</li>
+                            <li>Habilidade de Pesquisa.</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
+        </section>
+        <section class="projetos">
+
         </section>
     </main>
 </body>
