--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DS Developer</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -31,9 +32,9 @@
                         <h1>Transformando complexidade em simplicidade tecnológica.</h1>
                         <p>Acredito que a simplicidade é a chave para criar experiências tecnológicas verdadeiramente excepcionais. Minha abordagem consiste em desvendar a complexidade, traduzindo-a em soluções acessíveis e intuitivas. Isso não apenas melhora a usabilidade, mas também permite que as pessoas adotem a tecnologia de forma mais eficaz. Minha paixão por transformar o complicado em simples continua a impulsionar meu trabalho diário, e estou comprometido em criar um mundo digital mais acessível e amigável para todos.</p>
                             <div class="btn-social">
-                                <a href="#"><button></button></a>
-                                <a href="#"><button></button></a>
-                                <a href="#"><button></button></a>
+                                <a href="https://instagram.com/_diego.cba?igshid=MzMyNGUyNmU2YQ==" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
+                                <a href="https://www.linkedin.com/in/diego-silva-671090237" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
+                                <a href="https://github.com/DiegoSilvaCBA" target="_blank"><i class='bx bxl-github'></i></a>
                             </div>
                         </div>
 
