Update section projetos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#">Início</a></li>
                     <li><a href="#">Sobre mim</a></li>
                     <li><a href="#">Projetos</a></li>
-                    <li><a href="#">contato</a></li>
+                    <li><a href="#">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -27,7 +27,7 @@
     <main>
         <section class="interface-principal">
             <div class="perfil">
-                <div class="flex01">
+                <div class="flex">
                     <div class="inicio-site">
                         <h1>Transformando complexidade em simplicidade tecnológica.</h1>
                         <p>Acredito que a simplicidade é a chave para criar experiências tecnológicas verdadeiramente excepcionais. Minha abordagem consiste em desvendar a complexidade, traduzindo-a em soluções acessíveis e intuitivas. Isso não apenas melhora a usabilidade, mas também permite que as pessoas adotem a tecnologia de forma mais eficaz. Minha paixão por transformar o complicado em simples continua a impulsionar meu trabalho diário, e estou comprometido em criar um mundo digital mais acessível e amigável para todos.</p>
@@ -48,7 +48,7 @@
 
         <section class="sobre-mim">
             <div class="informacoes">
-                <div class="flex02">
+                <div class="flex">
                     <div class="biografia">
                         <h2>Sobre Mim:</h2>
                         <p>Meu nome é Diego da Silva Rodrigues sou desenvolvedor front end, e desde criança, a tecnologia sempre foi minha paixão. Cresci fascinado por computadores e sistemas, e essa curiosidade me guiou ao longo de toda minha vida.</p>
@@ -83,7 +83,17 @@
             </div>
         </section>
         <section class="projetos">
-
+            <div class="amostras">
+                <h2>Projetos:</h2>
+                <div class="flex">
+                  <div class="img-port" style="background-image:url(img/site-cordel.png);"></div>
+                  <p></p>
+                  <div class="img-port" style="background-image: url(img/site-android.png);"></div>
+                  <p></p>
+                  <div class="img-port" style="background-image: url(img/site-calculadora.png);"></div>
+                  <p></p>
+                </div>
+            </div>
         </section>
     </main>
 </body>
