Creat section formacoes e blog

--- a/index.html
+++ b/index.html
@@ -86,13 +86,64 @@
             <div class="amostras">
                 <h2>Projetos:</h2>
                 <div class="flex">
-                  <div class="img-port" style="background-image:url(img/site-cordel.png);"></div>
-                  <p></p>
-                  <div class="img-port" style="background-image: url(img/site-android.png);"></div>
-                  <p></p>
-                  <div class="img-port" style="background-image: url(img/site-calculadora.png);"></div>
-                  <p></p>
+                  <div class="container-descricao">
+                    <div class="img-port" style="background-image:url(img/site-cordel.png);"></div>
+                    <p>Site cordel moderno, a poesia e a inovação se entrelaçam de maneira única. O cordel de Milton Duarte sobre tecnologia é uma era digital.
+
+                        O destaque deste site é o efeito parallax, que proporciona uma experiência visual cativante. À medida que você rola a página, as imagens e elementos de fundo se movem em camadas diferentes, criando uma sensação de profundidade e imersão. É como se você estivesse navegando por um cordel tecnológico em movimento, tornando a leitura ainda mais envolvente.</p>
                 </div>
+                <div class="container-descricao">
+                  <div class="img-port" style="background-image: url(img/site-android.png);"></div>
+                  <p>Site curiosidades sobre Tecnologia, onde exploramos a cativante jornada do sistema operacional Android. Esta é uma viagem que nos levará ao passado, apresentando a evolução, a primeira versão e até mesmo o mascote icônico que tornou o Android um nome familiar em todo o mundo.</p>
+                </div>
+                <div class="container-descricao">
+                  <div class="img-port" style="background-image: url(img/site-calculadora.png);"></div>
+                  <p> O site Calculadora de Trabalho, a sua ferramenta essencial para simplificar o gerenciamento financeiro relacionado ao seu emprego. Este site foi projetado para fornecer todas as informações de que você precisa para manter o controle das horas trabalhadas, dos dias de trabalho no mês, das despesas mensais e até mesmo do valor do equipamento necessário para o seu trabalho.</p>
+                </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="formacoes">
+            <div class="educacao">
+                <div class="flex">
+                    <div class="instituicoes">
+                        <h2>Instituições:</h2>
+                        <ul>
+                            <li>Centro Universitario UNIFG 2022-2024</li>
+                        </ul>
+                    </div>
+                    <div class="certificacoes">
+                        <h2>Certificações:</h2>
+                        <ul>
+                            <li>Certificação Cisco- 2022 – Fundamentos de Cibersegurança/ Cisco Networking
+                                Academy.</li>
+                            <li>Certificação Cisco- 2022 – Introdução a Redes/ Cisco Networking Academy.</li>
+                            <li>Certificação Aws- 2022 – Cloud Foundations/ Aws Academy.</li>
+                            <li>Certificação Oracle- 2022 – Java Foundations/ Oracle Academy.</li>
+                            <li>Certificado Oracle- 2022 - Database Design/ Oracle Academy.</li>    
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="blog">
+            <div class="artigo">
+                <h2>Transformação Digital: Como a TI está Moldando o Futuro dos Negócios</h2>
+                <p>A Tecnologia da Informação (TI) é uma força impulsionadora na revolução digital que estamos testemunhando. À medida que o mundo se torna cada vez mais conectado e dependente da tecnologia, a TI desempenha um papel fundamental na transformação de empresas e sociedades. Neste artigo, exploraremos o impacto da TI e como ela está moldando o futuro dos negócios.</p>
+                <h3>A Era da Transformação Digital</h3>
+                <p>Vivemos na era da transformação digital, um período em que a tecnologia está redefinindo fundamentalmente a maneira como fazemos negócios. As empresas estão adotando a digitalização para melhorar a eficiência, aprimorar a experiência do cliente e inovar em novos produtos e serviços. E a TI está na vanguarda dessa revolução.</p>
+                <h3>O Papel da TI na Transformação Digital</h3>
+                <p>A TI é o motor por trás da transformação digital. Ela fornece as ferramentas e os recursos necessários para que as empresas coletem, armazenem, processem e analisem dados de maneira eficiente. Esses dados são a base para insights valiosos que ajudam as empresas a tomar decisões informadas.</p>
+                <h3>Segurança da Informação em Destaque</h3>
+                <p>À medida que as empresas se tornam mais dependentes da tecnologia, a segurança da informação se torna uma prioridade crítica. A TI desempenha um papel fundamental na proteção dos dados e na defesa contra ameaças cibernéticas. As equipes de segurança da informação estão constantemente desenvolvendo estratégias para mitigar riscos e garantir a conformidade regulatória.</p>
+                <h3>Inteligência Artificial e Automatização</h3>
+                <p>A IA (Inteligência Artificial) e a automatização estão revolucionando processos de negócios. A TI permite que as empresas implementem IA para análise de dados avançada, chatbots para atendimento ao cliente e automação de tarefas repetitivas. Isso melhora a eficiência e libera recursos para atividades mais estratégicas.</p>
+                <h3>O Futuro da TI</h3>
+                <p>À medida que a TI continua a evoluir, podemos esperar avanços ainda mais emocionantes. Tecnologias emergentes, como a computação quântica e a Internet das Coisas (IoT), prometem transformar ainda mais a paisagem da TI. A colaboração entre equipes de TI e outros departamentos se tornará ainda mais essencial à medida que as empresas buscam inovar e se adaptar rapidamente.</p>
+                <h3>Conclusão</h3>
+                <p>A TI desempenha um papel insubstituível na transformação digital. À medida que avançamos para um futuro cada vez mais tecnológico, a TI continuará a ser a espinha dorsal das operações de negócios e a chave para a inovação. Este é um momento emocionante para a área de TI, à medida que enfrentamos desafios e oportunidades que moldarão o nosso mundo nos anos que virão.</p>
             </div>
         </section>
     </main>
