Update section formulario de contato

--- a/index.html
+++ b/index.html
@@ -146,6 +146,21 @@
                 <p>A TI desempenha um papel insubstituível na transformação digital. À medida que avançamos para um futuro cada vez mais tecnológico, a TI continuará a ser a espinha dorsal das operações de negócios e a chave para a inovação. Este é um momento emocionante para a área de TI, à medida que enfrentamos desafios e oportunidades que moldarão o nosso mundo nos anos que virão.</p>
             </div>
         </section>
+
+        <section class="formulario-contato">
+            <div class="interface-formulario">
+                <h2 class="titulo">FALE COMIGO:</h2>
+
+                <form action="">
+                    <input type="text" nome="" id="" placeholder="Seu nome completo:" required>
+                    <input type="text" nome="" id="" placeholder="E-mail:" required>
+                    <input type="text" nome="" id="" placeholder="Celular:">
+                    <input type="text" nome="" id="" placeholder="Assunto da mensagem:">
+                    <textarea name="" id="" placeholder="Sua mensagem:" requerid></textarea>
+                    <div class="btn-enviar"><input type="submit" value="ENVIAR MENSAGEM"></div>
+                </form>
+            </div>
+        </section>
     </main>
 </body>
 </html>
