Create class footer

--- a/index.html
+++ b/index.html
@@ -162,5 +162,22 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="rodape">
+        <div class="flex">
+            <div class="logo">&lt;/&gt;</div>
+            <div class="informaoes-footer">
+            <p>&#169;copyright@Diego Silva</p>
+            <p>2023</p>
+            </div>
+            <div class="btn-social">
+                <a href="https://instagram.com/_diego.cba?igshid=MzMyNGUyNmU2YQ==" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="https://www.linkedin.com/in/diego-silva-671090237" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="https://github.com/DiegoSilvaCBA" target="_blank"><i class='bx bxl-github'></i></a>
+            </div>
+        </div>    
+    </div>
+    </footer>
 </body>
 </html>
