--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
            </div>
             <nav class="menu">
                 <ul>
-                    <li><a href="#">Início</a></li>
-                    <li><a href="#">Sobre mim</a></li>
-                    <li><a href="#">Projetos</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="#interface-principal">Início</a></li>
+                    <li><a href="#sobre-mim">Sobre mim</a></li>
+                    <li><a href="#projetos">Projetos</a></li>
+                    <li><a href="#formulario-contato">Contato</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <main>
-        <section class="interface-principal">
+        <section class="interface-principal" id="interface-principal">
             <div class="perfil">
                 <div class="flex">
                     <div class="inicio-site">
@@ -46,7 +46,7 @@
             </div>
         </section>
 
-        <section class="sobre-mim">
+        <section class="sobre-mim" id="sobre-mim">
             <div class="informacoes">
                 <div class="flex">
                     <div class="biografia">
@@ -82,7 +82,7 @@
                 </div>
             </div>
         </section>
-        <section class="projetos">
+        <section class="projetos" id="projetos">
             <div class="amostras">
                 <h2>Projetos:</h2>
                 <div class="flex">
@@ -147,7 +147,7 @@
             </div>
         </section>
 
-        <section class="formulario-contato">
+        <section class="formulario-contato" id="formulario-contato">
             <div class="interface-formulario">
                 <h2 class="titulo">FALE COMIGO:</h2>
 
