--- a/index.html
+++ b/index.html
@@ -151,16 +151,16 @@
             <div class="interface-formulario">
                 <h2 class="titulo">FALE COMIGO:</h2>
 
-                <form action="">
-                    <input type="text" nome="" id="" placeholder="Seu nome completo:" required>
-                    <input type="text" nome="" id="" placeholder="E-mail:" required>
-                    <input type="text" nome="" id="" placeholder="Celular:">
-                    <input type="text" nome="" id="" placeholder="Assunto da mensagem:">
-                    <textarea name="" id="" placeholder="Sua mensagem:" requerid></textarea>
-                    <div class="btn-enviar"><input type="submit" value="ENVIAR MENSAGEM"></div>
+                <form action="https://formsubmit.co/diegosilvacba2017@gmail.com.com" method="POST" data-form>
+                    <input type="text" name="" id="" placeholder="Seu nome completo:" required>
+                    <input type="text" name="" id="" placeholder="E-mail:" required>
+                    <input type="text" name="" id="" placeholder="Celular:">
+                    <input type="text" name="" id="" placeholder="Assunto da mensagem:">
+                    <textarea name="mensagem" id="mensagem" placeholder="Sua mensagem:" required></textarea>
+                    <div class="btn-enviar"><input type="submit" data-button value="ENVIAR MENSAGEM"></div>
                 </form>
             </div>
-        </section>
+        </section>          
     </main>
 
     <footer>
@@ -179,5 +179,6 @@
         </div>    
     </div>
     </footer>
+    <script defer src="script.js"></script>
 </body>
 </html>
