Update links e style.css

--- a/index.html
+++ b/index.html
@@ -91,14 +91,17 @@
                     <p>Site cordel moderno, a poesia e a inovação se entrelaçam de maneira única. O cordel de Milton Duarte sobre tecnologia é uma era digital.
 
                         O destaque deste site é o efeito parallax, que proporciona uma experiência visual cativante. À medida que você rola a página, as imagens e elementos de fundo se movem em camadas diferentes, criando uma sensação de profundidade e imersão. É como se você estivesse navegando por um cordel tecnológico em movimento, tornando a leitura ainda mais envolvente.</p>
+                        <a href="https://diegosilvacba.github.io/projeto-cordel/" target="_blank">Link do projeto</a>
                 </div>
                 <div class="container-descricao">
                   <div class="img-port" style="background-image: url(img/site-android.png);"></div>
                   <p>Site curiosidades sobre Tecnologia, onde exploramos a cativante jornada do sistema operacional Android. Esta é uma viagem que nos levará ao passado, apresentando a evolução, a primeira versão e até mesmo o mascote icônico que tornou o Android um nome familiar em todo o mundo.</p>
+                  <a href="https://diegosilvacba.github.io/projeto-android/" target="_blank">Link do projeto</a>
                 </div>
                 <div class="container-descricao">
                   <div class="img-port" style="background-image: url(img/site-calculadora.png);"></div>
                   <p> O site Calculadora de Trabalho, a sua ferramenta essencial para simplificar o gerenciamento financeiro relacionado ao seu emprego. Este site foi projetado para fornecer todas as informações de que você precisa para manter o controle das horas trabalhadas, dos dias de trabalho no mês, das despesas mensais e até mesmo do valor do equipamento necessário para o seu trabalho.</p>
+                  <a href="https://diegosilvacba.github.io/calculadora-hora-de-trabalho/" target="_blank">Link do projeto</a>
                 </div>
                 </div>
             </div>
@@ -167,12 +170,13 @@
         <div class="rodape">
         <div class="flex">
             <div class="logo">&lt;/&gt;</div>
-            <div class="informaoes-footer">
+            <div class="informacoes-footer">
             <p>&#169;copyright@Diego Silva</p>
             <p>2023</p>
             </div>
             <div class="btn-social">
                 <a href="https://instagram.com/_diego.cba?igshid=MzMyNGUyNmU2YQ==" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank"><i class='bx bxl-gmail'></i></a>
                 <a href="https://www.linkedin.com/in/diego-silva-671090237" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
                 <a href="https://github.com/DiegoSilvaCBA" target="_blank"><i class='bx bxl-github'></i></a>
             </div>
